ajax for coupon done.checkout remaining

--- a/adminapp/templates/adminside/add_coupon.html
+++ b/adminapp/templates/adminside/add_coupon.html
@@ -63,7 +63,7 @@
             
                 <div class="form-group col-6 d-flex ">
                     <div class="form-single nk-int-st widget-form">
-                        <input type="number" class="form-control" placeholder="purchase_count" name="purchase_count"required />
+                        <input type="number" class="form-control" placeholder="purchase_count" name="purchase_count" />
                     </div>
                 </div>
             
