--- a/adminapp/templates/adminside/edit_coupon.html
+++ b/adminapp/templates/adminside/edit_coupon.html
@@ -60,7 +60,7 @@
                </div>
                <div class="form-group col-6 d-flex ">
                 <div class="form-single nk-int-st widget-form">
-                    <input type="number" class="form-control" placeholder="purchase_count" value="{{coupon.purchase_count}}"name="purchase_count"required />
+                    <input type="number" class="form-control" placeholder="purchase_count" value="{{coupon.purchase_count}}"name="purchase_count" />
                 </div>
             </div></div>
                <div class="form-group">
