--- a/home/templates/userside/cart.html
+++ b/home/templates/userside/cart.html
@@ -43,7 +43,7 @@
                         {% endwith %}
                         <td class="align-middle">{{cart_item.product_variant.size}}</td>
                         <td class="align-middle">{{cart_item.product_variant.color}}</td>
-                        <td class="align-middle">₹{{cart_item.product_variant.price}}</td>
+                        <td class="align-middle">₹{{cart_item.price}}</td>
                         <!-- <input type="hidden" class="cart-item-id" value="{{ cart_item.id }}"> -->
                         <td class="align-middle">
                             <div class="input-group quantity mx-auto" style="width: 100px;">
