--- a/home/templates/userside/checkout.html
+++ b/home/templates/userside/checkout.html
@@ -108,6 +108,7 @@
                 </div>
                 {% endif %}
             </div>
+            <a href="{% url 'payment_success' %}">Go to payment</a>
             <div class="card border-secondary mb-5">
                 <div class="card-header bg-secondary border-0">
                     <h4 class="font-weight-semi-bold m-0">Payment</h4>
